# rdvc

./: .editorconfig  .gitignore  LICENSE  README.md  init_python_venv.sh  pyproject.toml  setup.cfg
src/rdvc/: __init__.py  cli.py  cli_options.py  dir.py  queue.py  repo.py
src/rdvc/commands/: init.py  queue.py  run.py
src/rdvc/slurm/: instance.py  remote_checks.py  remote_command.py  sbatch_script.py  ssh_client.py
src/rdvc/templates/commands/: queue.sbatch.j2  run.sbatch.j2
src/rdvc/templates/sections/: prepare_dvc.j2  prologue.j2  push_dvc.j2
