[metadata]
name = rdvc
description = Submit DVC experiments to SLURM clusters
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/exs-dmiketa/rdvc
author = Exscientia
project_urls =
    Source = https://github.com/exs-dmiketa/rdvc
    Issue tracker = https://github.com/exs-dmiketa/rdvc/issues
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Typing :: Typed

[options]
packages = find_namespace:
package_dir =
    =src
python_requires = >= 3.8
include_package_data = True
install_requires =
    click!=8.1.0,!=8.1.4,!=8.1.5  # issues with mypy
    click-option-group
    dulwich
    contextlib-chdir
    dvc[s3]>=3.5.0
    paramiko
    types-paramiko
    jinja2
    types-Jinja2
    tomli
    tomli-w
    typing-extensions

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    rdvc = rdvc.cli:cli

[options.extras_require]
tests =
    coverage[toml]
    coverage-badge
    pytest

typing =
    mypy>1.4
    types-setuptools
    types-pyyaml

# 'dev' catch-all; useful for local pip install via `pip install -.e[dev]`
# Makes use of ConfigParser interpolation: https://docs.python.org/3/library/configparser.html#interpolation-of-values
dev =
    nox
    pyyaml
    setuptools_scm
    %(tests)s
    %(typing)s
